# LLMTritonStack

./: .gitignore  README.md  main.py  pyproject.toml
docs/: design.md  learning_plan_short_term.md
examples/: README.md
scripts/: infer.py  pretrain.py  sft_train.py
src/llm_lab/: __init__.py  config.py
src/llm_lab/core/: attention.py  mlp.py  model.py  transformer_block.py
src/llm_lab/datasets/: datasets.py
src/llm_lab/ops/: rmsnorm.py
src/llm_lab/utils/: logger.py
